tests/ui/pub/pub-restricted-error-fn.rs
pub(crate) () fn foo() {} //~ ERROR visibility `pub(crate)` is not followed by an item
//~^ ERROR expected item, found `(`
